--- a/datascience-env/docker-compose.yaml
+++ b/datascience-env/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: gnasello/datascience-env:latest    
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jupyter.rule=PathPrefix(`/${UNAME}/datascience-env`)"
-      - "traefik.http.services.jupyter.loadbalancer.server.port=8888"
-      - "traefik.http.routers.jupyter.entrypoints=web"
+      - "traefik.http.routers.datascience_${UNAME}.rule=PathPrefix(`/${UNAME}/datascience-env`)"
+      - "traefik.http.services.datascience_${UNAME}.loadbalancer.server.port=8888"
+      - "traefik.http.routers.datascience_${UNAME}.entrypoints=web"
     user: root
     environment:
       - CHOWN_HOME=yes
