--- a/ofpv-env/docker-compose.yaml
+++ b/ofpv-env/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: gnasello/ofpv-env:latest    
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.ofpv${UNAME}.rule=PathPrefix(`/${UNAME}/ofpv-env`)"
-      - "traefik.http.services.ofpv${UNAME}.loadbalancer.server.port=8888"
-      - "traefik.http.routers.ofpv${UNAME}.entrypoints=web"
+      - "traefik.http.routers.ofpv_${UNAME}.rule=PathPrefix(`/${UNAME}/ofpv-env`)"
+      - "traefik.http.services.ofpv_${UNAME}.loadbalancer.server.port=8888"
+      - "traefik.http.routers.ofpv_${UNAME}.entrypoints=web"
     user: root
     environment:
       - CHOWN_HOME=yes
