--- a/napari-env/docker-compose.yaml
+++ b/napari-env/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "traefik.http.services.napari-${UNAME}.loadbalancer.server.port=3000"
 
     volumes:
-      - $HOME_RESEARCHER:/config/researcher_home
+      - ${HOME_RESEARCHER}:/config/researcher_home
 
     environment:
       - CONTAINER_URL=http://napari-${UNAME}.${QUBEIP}.nip.io:${QUBEPORT}
